Adding SEO friendly titles

--- a/about.html
+++ b/about.html
@@ -15,13 +15,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="discription"
+      content="This is a profile page about the front-end developer projects created by Inge van Schoot"
+    />
     <link rel="stylesheet" href="/styles/styles.css" />
     <title>About Inge</title>
   </head>
   <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Inge van Schoot</a>
+        <a class="navbar-brand" href="/" title="Homepage">Inge van Schoot</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,9 +39,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/about.html">About me</a>
-            <a class="nav-link" href="/about.html#contact">Contact me</a>
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/"
+              title="Homepage"
+              >Home</a
+            >
+            <a class="nav-link" href="/about.html" title="About Inge"
+              >About me</a
+            >
+            <a class="nav-link" href="/about.html#contact" title="Contact Inge"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
@@ -55,20 +69,39 @@
     <div class="container">
       <div class="row">
         <div class="col-sm-4">
-          <img src="/images/yoga.png" class="rounded p-2 shadow img-fluid" />
+          <img
+            src="/images/yoga.png"
+            class="rounded p-2 shadow img-fluid"
+            alt="Yoga app"
+            title="Yoga app"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="/images/weather.png" class="rounded p-2 shadow img-fluid" />
+          <img
+            src="/images/weather.png"
+            class="rounded p-2 shadow img-fluid"
+            alt="Weather app"
+            title="Weather app"
+          />
         </div>
         <div class="col-sm-4">
-          <img src="/images/yogurt.png" class="rounded p-2 shadow img-fluid" />
+          <img
+            src="/images/yogurt.png"
+            class="rounded p-2 shadow img-fluid"
+            alt="Yogurt app"
+            title="Yogurt app"
+          />
         </div>
       </div>
     </div>
 
     <div id="contact" class="mt-5">
       <h2>📮 Contact me</h2>
-      <a href="mailto:inge.vanschoot@gmail.com" class="email-link">
+      <a
+        href="mailto:inge.vanschoot@gmail.com"
+        class="email-link"
+        title="inge.vanschoot@gmail.com"
+      >
         inge.vanschoot@gmail.com
       </a>
     </div>
