--- a/index.html
+++ b/index.html
@@ -15,13 +15,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Inge van Schoot</title>
+    <meta
+      name="discription"
+      content="This is a profile page about the front-end developer projects created by Inge van Schoot"
+    />
+    <title>Front-end developer - Inge van Schoot</title>
     <link rel="stylesheet" href="/styles/styles.css" />
   </head>
   <body>
     <nav class="navbar navbar-expand-lg fixed-top navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="/">Inge van Schoot</a>
+        <a class="navbar-brand" href="/" title="Homepage">Inge van Schoot</a>
         <button
           class="navbar-toggler"
           type="button"
@@ -35,9 +39,19 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="/">Home</a>
-            <a class="nav-link" href="/about.html">About me</a>
-            <a class="nav-link" href="/about.html#contact">Contact me</a>
+            <a
+              class="nav-link active"
+              aria-current="page"
+              href="/"
+              title="Homepage"
+              >Home</a
+            >
+            <a class="nav-link" href="/about.html" title="About Inge"
+              >About me</a
+            >
+            <a class="nav-link" href="/about.html#contact" title="Contact Inge"
+              >Contact me</a
+            >
           </div>
         </div>
       </div>
@@ -46,13 +60,20 @@
     <h1>Inge van Schoot</h1>
     <h3>🇳🇱 Front-end developer, based in The Netherlands</h3>
     <div class="navigation-links">
-      <a href="/about.html#contact" class="contact-link">Contact me</a>
-      <a href="/about.html" class="about-link">About me</a>
+      <a href="/about.html#contact" class="contact-link" title="Contact Inge"
+        >Contact me</a
+      >
+      <a href="/about.html" class="about-link" title="About Inge">About me</a>
     </div>
     <div class="container-xxl">
       <div class="row">
         <div class="col-md-6">
-          <img src="/images/yoga.png" class="rounded img-fluid" />
+          <img
+            src="/images/yoga.png"
+            class="rounded img-fluid"
+            title="Yoga app"
+            alt="Yoga app"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yoga app</h2>
@@ -63,7 +84,9 @@
             explicabo eum dolore.
           </p>
           <div class="navigation-links">
-            <a href="#" class="contact-link">Launch app</a>
+            <a href="#" class="contact-link" title="Launch yoga app"
+              >Launch app</a
+            >
           </div>
         </div>
       </div>
@@ -77,16 +100,28 @@
             explicabo eum dolore.
           </p>
           <div class="navigation-links">
-            <a href="#" class="contact-link">Launch app</a>
+            <a href="#" class="contact-link" title="Launch weather app"
+              >Launch app</a
+            >
           </div>
         </div>
         <div class="col-md-6">
-          <img src="/images/weather.png" class="rounded img-fluid" />
+          <img
+            src="/images/weather.png"
+            class="rounded img-fluid"
+            title="Weather app"
+            alt="Weather app"
+          />
         </div>
       </div>
       <div class="row mt-5">
         <div class="col-md-6">
-          <img src="/images/yogurt.png" class="rounded img-fluid" />
+          <img
+            src="/images/yogurt.png"
+            class="rounded img-fluid"
+            title="Yogurt app"
+            alt="Yogurt app"
+          />
         </div>
         <div class="col-md-6">
           <h2 class="mb-3">Yogurt app</h2>
@@ -97,7 +132,9 @@
             explicabo eum dolore.
           </p>
           <div class="navigation-links">
-            <a href="#" class="contact-link">Launch app</a>
+            <a href="#" class="contact-link" title="Launch yogurt app"
+              >Launch app</a
+            >
           </div>
         </div>
       </div>
