--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
         <div class="col-md-6">
           <img
             src="/images/yoga.png"
-            class="rounded img-fluid"
+            class="rounded img-fluid d-none d-sm-block"
             title="Yoga app"
             alt="Yoga app"
           />
@@ -108,7 +108,7 @@
         <div class="col-md-6">
           <img
             src="/images/weather.png"
-            class="rounded img-fluid"
+            class="rounded img-fluid d-none d-sm-block"
             title="Weather app"
             alt="Weather app"
           />
@@ -118,7 +118,7 @@
         <div class="col-md-6">
           <img
             src="/images/yogurt.png"
-            class="rounded img-fluid"
+            class="rounded img-fluid d-none d-sm-block"
             title="Yogurt app"
             alt="Yogurt app"
           />
