--- a/about.html
+++ b/about.html
@@ -71,7 +71,7 @@
         <div class="col-sm-4">
           <img
             src="/images/yoga.png"
-            class="rounded p-2 shadow img-fluid"
+            class="rounded p-2 mb-4 shadow img-fluid"
             alt="Yoga app"
             title="Yoga app"
           />
@@ -79,7 +79,7 @@
         <div class="col-sm-4">
           <img
             src="/images/weather.png"
-            class="rounded p-2 shadow img-fluid"
+            class="rounded p-2 mb-4 shadow img-fluid"
             alt="Weather app"
             title="Weather app"
           />
@@ -87,7 +87,7 @@
         <div class="col-sm-4">
           <img
             src="/images/yogurt.png"
-            class="rounded p-2 shadow img-fluid"
+            class="rounded p-2 mb-4 shadow img-fluid"
             alt="Yogurt app"
             title="Yogurt app"
           />
